--- a/adminStyle.css
+++ b/adminStyle.css
@@ -5,6 +5,7 @@
 body {
   font-family: sans-serif;
   min-height: 100vh;
+  background-color: #f0f8ff;
 
   display: grid;
   grid-template-columns: 300px 1fr;
@@ -35,14 +36,13 @@ body {
   text-align: center; /* Center the text */
 }
 .admin-img {
-  background-image: url(.\img\user.png);
+  background-image: url(./img/user.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 
   width: 50px;
   height: 50px;
-  border: solid 1px black;
   border-radius: 50%;
   margin-left: auto;
 }
@@ -59,8 +59,18 @@ body {
   grid-column: 1/2;
   grid-row: 1/3;
 }
-.logoutBtn {
+
+.admin-name {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 18px;
+  height: 30px;
 }
+
 .IBT-admin {
   display: flex;
   align-items: center;
@@ -119,10 +129,11 @@ a {
 
 .dash {
   display: flex;
-  height: 250px;
-  width: 500px;
+  height: 150px;
+  width: 300px;
+  font-size: 20px;
 
-  background-color: #fff;
+  background-color: #ffff;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
   margin: 10px 0;
 
@@ -168,8 +179,58 @@ form,
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.seat_grid {
+.table-container {
+  max-height: 300px; /* Set a fixed height */
+  overflow-y: auto; /* Enable vertical scrolling */
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+  border: 1px solid #ddd; /* Optional: border around the container */
+}
+
+.seat-section {
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#seat_grid {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 10px;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+#seat_grid input {
+  display: none;
+}
+
+#seat_grid label {
+  display: flex;
+  width: 50px;
+  height: 50px;
+  border: 2px solid #007bff;
+  border-radius: 5px;
+  background-color: white;
+  color: #007bff;
+  justify-content: center;
+  line-height: 50px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+  align-items: center;
+}
+
+#seat_grid input:checked + label {
+  background-color: #007bff; /* Background color when checked */
+  color: white; /* Text color when checked */
+}
+
+.occupied {
+  background-color: #22ff0a; /* Background color when checked */
+  color: white; /* Text color when checked */
 }
 
 label {
@@ -222,6 +283,9 @@ h2 {
 
 table {
   width: 100%;
+  max-height: 300px; /* Set a fixed height */
+  overflow-y: auto; /* Enable vertical scrolling */
+  overflow-x: hidden; /* Prevent horizontal scrolling */
   border-collapse: collapse;
   margin-bottom: 20px;
   background-color: white;
