--- a/userStyle.css
+++ b/userStyle.css
@@ -23,6 +23,7 @@ body {
   gap: 10px;
   overflow: hidden; /* Ensure no overflow from the pseudo-element */
   z-index: 1; /* Ensure the content is above the pseudo-element */
+  margin-bottom: 20px;
 }
 
 .container-banner::before {
@@ -36,14 +37,21 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  filter: blur(5px); /* Apply blur to the background */
-  -webkit-filter: blur(5px); /* For Safari */
+  filter: blur(3px); /* Apply blur to the background */
+  -webkit-filter: blur(3px); /* For Safari */
   z-index: -1; /* Position behind the content */
 }
 .container-banner p,
 .container-banner h1 {
   width: 60%;
-  text-shadow: 3px 2px 0 rgba(0, 0, 0, 0.8);
+  text-shadow: 0px 3px 0 rgba(0, 0, 0, 0.5);
+}
+.container-banner h1 {
+  font-size: 52px;
+}
+
+.container-banner p {
+  font-size: 20px;
 }
 .container {
   width: 80%;
@@ -84,9 +92,13 @@ header {
   padding: 5px 10px;
   border-radius: 5px;
 }
+.signin-btn {
+  border: solid 1px rgba(0, 0, 0, 0.7);
+}
 .nav-link:hover {
   background-color: #007bff;
   color: white;
+  border: none;
 }
 .dropdown {
   position: relative;
@@ -106,6 +118,11 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
 }
+.icon-dropdown {
+  width: 18px;
+  height: 18px;
+  color: rgba(0, 0, 0, 0.7);
+}
 .dropdown-content {
   display: none;
   position: absolute;
@@ -115,11 +132,13 @@ header {
   z-index: 1;
   right: 0;
 }
-.dropdown-content a {
-  color: black;
+.dropdown-content a,
+.username {
+  color: rgba(0, 0, 0, 0.7);
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  justify-content: center;
 }
 .dropdown-content a:hover {
   background-color: #f1f1f1;
@@ -137,6 +156,16 @@ header {
   width: 150px;
   text-align: center;
 }
+.featurette h2 {
+  font-size: 40px;
+  line-height: 1.5;
+}
+
+.featurette p {
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.7);
+}
+
 .featurette {
   display: flex;
   margin: 40px 0;
@@ -145,7 +174,7 @@ header {
 }
 .featurette-image1,
 .featurette-image2 {
-  width: 400px;
+  width: 500px;
   height: 400px;
   background-color: red;
 }
@@ -157,7 +186,7 @@ header {
 }
 
 .featurette-image2 {
-  background-image: url(./img/f2.jpg);
+  background-image: url(./img/f3.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -168,7 +197,7 @@ header {
   border-top: 1px solid #ddd;
 }
 .featurette-text {
-  width: 400px;
+  width: 500px;
 }
 .about-section {
   display: flex;
@@ -191,12 +220,17 @@ header {
   text-align: center;
 }
 .about {
+  color: rgba(0, 0, 0, 0.8);
+  font-size: 34px;
   margin: 10px 0;
+  width: 90%;
+  justify-self: center;
 }
 .footer {
   background-color: #ffffff;
   padding: 20px 0;
   text-align: center;
+  margin-top: 20px;
 }
 .footer-links {
   list-style-type: none;
@@ -218,6 +252,11 @@ header {
   padding: 20px;
 }
 
+main.container {
+  background-color: #ffffff;
+  border-radius: 10px;
+}
+
 #main-content {
   background-color: #fff;
   padding: 30px;
@@ -234,7 +273,6 @@ h1.booking-title {
 /* Form styles */
 .AddEdit form {
   display: grid;
-  gap: 15px;
 }
 
 label {
@@ -246,7 +284,7 @@ label {
 input[type="text"],
 input[type="date"],
 select {
-  width: 100%;
+  max-width: 100%;
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -275,12 +313,53 @@ select {
 #route-details p {
   margin: 5px 0;
 }
+section.seat {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 540px;
+}
 
 #seat_grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
+  width: 90%;
+  max-height: 300px;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   gap: 10px;
-  margin-top: 10px;
+  margin: 10px 0;
+  justify-self: center;
+  align-items: center;
+}
+
+#seat_grid input {
+  display: none;
+}
+
+#seat_grid label {
+  display: flex;
+  width: 100px;
+  height: 100px;
+  border: 2px solid #007bff;
+  border-radius: 5px;
+  background-color: white;
+  color: #007bff;
+  justify-content: center;
+  line-height: 50px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+  align-items: center;
+}
+
+#seat_grid input:checked + label {
+  background-color: #007bff; /* Background color when checked */
+  color: white; /* Text color when checked */
+}
+
+.occupied {
+  background-color: #22ff0a; /* Background color when checked */
+  color: white; /* Text color when checked */
 }
 
 input[type="submit"] {
@@ -292,6 +371,12 @@ input[type="submit"] {
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s ease;
+}
+
+.logo img {
+  width: 30px;
+  height: 30px;
+  display: block;
 }
 
 input[type="submit"]:hover {
