--- a/userStyle1.css
+++ b/userStyle1.css
@@ -61,7 +61,8 @@ body {
 .container-header {
   border-bottom: 1px solid #ddd;
   padding: 10px 20px;
-  background-color: #ffffff;
+  background-color: #283950;
+  color: #fff;
   position: sticky;
   z-index: 10;
   top: 0;
@@ -75,7 +76,7 @@ header {
   font-size: 24px;
   font-weight: bold;
   text-decoration: none;
-  color: #333;
+  color: #fff;
 }
 .nav {
   display: flex;
@@ -88,7 +89,7 @@ header {
 }
 .nav-link {
   text-decoration: none;
-  color: #333;
+  color: #fff;
   padding: 5px 10px;
   border-radius: 5px;
 }
@@ -96,7 +97,7 @@ header {
   border: solid 1px rgba(0, 0, 0, 0.7);
 }
 .nav-link:hover {
-  background-color: #007bff;
+  background-color: #1f2d3f;
   color: white;
   border: none;
 }
@@ -105,7 +106,7 @@ header {
   display: inline-block;
 }
 .dropbtn {
-  background-color: #f0f0f0;
+  background-color: #283950;
   color: #333;
   padding: 10px;
   width: 50px;
@@ -149,7 +150,7 @@ header {
 .button {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #007bff;
+  background-color: #024fb4;
   color: white;
   text-decoration: none;
   border-radius: 5px;
@@ -203,18 +204,19 @@ header {
   display: flex;
   justify-content: space-evenly;
   margin: 15px 0;
+  background-color: #283950;
 }
 .about-item {
   width: 300px;
   height: auto;
   display: flex;
   flex-direction: column;
-  background-color: #007bff;
+  background-color: #283950;
   color: #ffffff;
   padding: 10px;
   border-radius: 10px;
 
-  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);
+  /* box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3); */
 }
 .about-item h3 {
   text-align: center;
@@ -227,7 +229,8 @@ header {
   justify-self: center;
 }
 .footer {
-  background-color: #ffffff;
+  background-color: #283950;
+  color: #fff;
   padding: 20px 0;
   text-align: center;
   margin-top: 20px;
@@ -242,7 +245,7 @@ header {
 }
 .footer-link {
   text-decoration: none;
-  color: #333;
+  color: #fff;
 }
 
 /* General styles */
