--- a/admin/adminStyle.css
+++ b/admin/adminStyle.css
@@ -54,7 +54,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 10px;
   color: #fff;
   font-weight: bold;
   font-size: 18px;
@@ -238,7 +237,9 @@ input[type="number"],
 input[type="email"],
 input[type="date"],
 input[type="time"],
-select {
+input[type="password"],
+input[type="tel"],
+input select {
   width: 100%;
   padding: 10px;
   margin-bottom: 20px;
@@ -333,6 +334,42 @@ tbody tr:hover {
 .delete-btn:hover {
   background-color: #c82333;
 }
+
+/* .pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+.pagination a,
+.pagination span {
+  margin: 0 5px;
+  padding: 5px 10px;
+  border: 1px solid #ddd;
+  text-decoration: none;
+  color: black;
+}
+.pagination .current {
+  background-color: #007bff;
+  color: white;
+}
+.search-container {
+  display: flex;
+  justify-content: center;
+  background-color: transparent;
+  box-shadow: none;
+  border: none;
+}
+.search-container input {
+  padding: 5px;
+}
+.search-btn {
+  width: 100px;
+  height: 30px;
+}
+.search-input {
+  width: 300px;
+  height: 30px;
+} */
 
 /* Responsive styling */
 @media (max-width: 600px) {
