--- a/admin/adminStyle.css
+++ b/admin/adminStyle.css
@@ -1,11 +1,12 @@
 * {
   padding: 0;
   margin: 0;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 body {
-  font-family: sans-serif;
   min-height: 100vh;
-  background-color: #f0f8ff;
+  background-color: #f1f1f1;
+  /* background-color: #f0f8ff; */
 
   display: grid;
   grid-template-columns: 300px 1fr;
@@ -152,21 +153,41 @@ a {
 
 /*TABLE DESIGN*/
 .AddEditBus,
-.AddEdit {
+.AddEdit,
+.AddEditBooking {
   display: flex;
   justify-content: space-evenly;
   margin: 30px 0;
 }
+
+.AddEditBooking {
+  flex-direction: row;
+  width: 90%;
+  margin: auto;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.booking-form-container {
+  max-width: 550px;
+}
+
 .editBtn {
   background-color: #218838;
   padding: 10px;
   border-radius: 5px;
+  font-size: 14px;
 }
 
 .deleteBtn {
   background-color: red;
   padding: 10px;
   border-radius: 5px;
+  font-size: 14px;
+}
+
+.refresh-Btn {
+  margin: 0 3px 0 0;
 }
 
 h1,
@@ -180,8 +201,7 @@ h1 {
   margin-bottom: 20px;
 }
 
-form,
-.seat {
+form {
   background-color: white;
   min-width: 500px;
   padding: 20px;
@@ -205,15 +225,14 @@ form,
 }
 
 #seat_grid {
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 10px;
   margin-top: 10px;
-  justify-content: center;
-  align-items: center;
   overflow: hidden;
+  justify-content: center;
 }
 
 #seat_grid input {
@@ -222,8 +241,8 @@ form,
 
 #seat_grid label {
   display: flex;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border: 2px solid #007bff;
   border-radius: 5px;
   background-color: white;
@@ -241,8 +260,9 @@ form,
 }
 
 .occupied {
-  background-color: #22ff0a; /* Background color when checked */
-  color: white; /* Text color when checked */
+  background-color: #ff0000 !important; /* Change to your desired color */
+  color: white !important;
+  cursor: not-allowed;
 }
 
 label {
@@ -306,15 +326,11 @@ table {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-th,
-td {
+th {
   padding: 12px 15px;
   text-align: left;
   border-bottom: 1px solid #ddd;
-}
-
-th {
-  background-color: #007bff;
+  background-color: #283950;
   color: white;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -322,6 +338,9 @@ th {
 
 td {
   color: #333;
+  text-align: left;
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
 }
 
 tbody tr:nth-child(even) {
@@ -358,8 +377,8 @@ tbody tr:hover {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-bottom: 10px;
-  gap: 10px;
+  margin: 10px 0;
+  gap: 15px;
 }
 .pagination {
   display: flex;
@@ -374,7 +393,7 @@ tbody tr:hover {
   color: black;
 }
 .pagination a.active {
-  background-color: #4caf50;
+  background-color: #283950;
   color: white;
 }
 .form-controls {
